# cosc-77

./: .gitignore  CMakeLists.txt  README.md  readme.md
assignments/a0/: main.cpp
assignments/a0/submission/: a0-animation.mov  description.md
assignments/a1/: LoopSubdivision.h  main.cpp
assignments/a1/submission/: cat_smoothing.mov  description.md
assignments/a2/: CMakeLists.txt  helloworld.frag  helloworld.vert  main.cpp  my_lambertian.frag  my_lambertian.vert  my_phong.frag  my_phong.vert
assignments/a2/submission/: description.md  step_6.mov
assignments/a3/: checkerboard.frag  checkerboard.vert  main.cpp  normal_mapping.frag  normal_mapping.vert
assignments/a3/submission/: description.md
assignments/a4/: 01_dirt_tutorial.cpp  02_test_tri_intersection.cpp  CMakeLists.txt  main.cpp  model.frag  model.vert  perlin.frag
assignments/a4/submission/: description.md
assignments/a5/: CMakeLists.txt  example.frag  main.cpp
assignments/a5/shaders/: model.frag  model.vert  perlin.frag  perlin.vert
assignments/a6/: main.cpp
assignments/a6/GLSL/: background.frag  coral.frag  coral.vert  fish.frag  grass.frag  object_1.frag  object_1.vert  rock.frag  skybox.frag  skybox.vert
assignments/a6/submission/: description.md
assignments/dirt_proj/: CMakeLists.txt  dirt_proj.cpp
assignments/dirt_proj/scenes/01_raytrace/: 01_plane.json  02_balls.json  03_refl.json  04_refr.json  05_quad-light.json  06_cornell-box.json
assignments/dirt_proj/scenes/02_raytrace_faster/complex/bunny-dragons/: bunny-dragons.json
assignments/dirt_proj/scenes/02_raytrace_faster/complex/cornell-box/: buddha-cornell-box.json
assignments/dirt_proj/scenes/02_raytrace_faster/complex/sponza-buddha/: sponza-buddha.json
assignments/dirt_proj/scenes/02_raytrace_faster/simple/: simple-geometry-no-bvh.json  simple-geometry.json
assignments/dirt_proj/scenes/03_raytrace_texture/: 03_bunny.json
assignments/tech_proj/: main.cpp
dirt_basecode/: CMakeLists.txt  README.md
dirt_basecode/ext/: CMakeLists.txt
dirt_basecode/ext/stb_image/: stb_image_write.h
dirt_basecode/src/: bbh.cpp  bbh.h  camera.h  color.cpp  color.h  common.cpp  common.h  fwd.h  image.cpp  image.h  material.cpp  material.h  mesh.cpp  mesh.h  obj.cpp  obj.h  parser.cpp  parser.h  path.cpp  path.h  progress.cpp  progress.h  quad.cpp  quad.h  rand.h  ray.h  scene-parse.cpp  scene.cpp  scene.h  sphere.cpp  sphere.h  surface.cpp  surface.h  surfacegroup.cpp  surfacegroup.h  texture.cpp  texture.h  timer.h  transform.h  vector.h
ext/tiny_obj_loader/: TinyObjLoader.cpp
scripts/: run_assignment.sh
src/: OpenGLCommon.h  OpenGLMesh.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h
tutorials/tutorial_hello_glsl/: main.cpp
